[package]
name = "mila"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "=4.5.7", features = ["derive"] }
regex = "1.10.4"
inkwell = { version = "0.4.0", features = ["llvm17-0-prefer-dynamic"] }
anyhow = "1.0.86"
